<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".clientui.MainActivity">
    <!--<Button-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="PERMISSION ON/OFF"-->
        <!--android:id="@+id/btnPermission"-->
        <!--android:onClick="buttonClicked"/>-->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Schedules"
        android:textAllCaps="true"
        android:id="@+id/btnNavigation"
        android:onClick="buttonClicked"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Profiles"
        android:textAllCaps="true"
        android:layout_below="@+id/btnNavigation"
        android:id="@+id/btnAllProfiles"
        android:onClick="buttonClicked"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"/>
    <Button android:layout_height="wrap_content" android:layout_width="match_parent" android:onClick="buttonClicked" android:id="@+id/btnNotificationList" android:text="Notifications" android:layout_alignParentRight="true" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_below="@+id/btnPermission" android:textAllCaps="true"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create Notification"
            android:textAllCaps="true"
            android:layout_below="@+id/btnAllProfiles"
            android:id="@+id/btnCreateNotify"
            android:onClick="buttonClicked"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Weekly View"
        android:textAllCaps="true"
        android:layout_below="@+id/btnCreateNotify"
        android:id="@+id/btnWeeklyView"
        android:onClick="buttonClicked"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"/>

    <!--<Button-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text=""-->
        <!--android:textAllCaps="true"-->
        <!--android:layout_below="@+id/btnCreateNotify"-->
        <!--android:id="@+id/btnShareFacebook"-->
        <!--android:onClick="buttonClicked"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentRight="true"/>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnShareFacebook"
            android:layout_centerVertical="true"
            style="?android:attr/borderlessButtonStyle"
            android:onClick="buttonClicked"
            android:src="@drawable/facebooklogo"/>


        <!--<ImageButton-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/btnShareTwitter"-->
            <!--android:layout_centerVertical="true"-->
            <!--style="?android:attr/borderlessButtonStyle"-->
            <!--android:onClick="buttonClicked"-->
            <!--android:layout_alignBottom="@+id/btnShareFacebook"-->
            <!--android:layout_toRightOf="@+id/btnShareFacebook"-->
            <!--android:layout_toEndOf="@+id/btnShareFacebook"-->
            <!--android:src="@drawable/Twitter_Social_Icon"/>-->

        <ImageButton
            android:layout_width="29dp"
            android:layout_height="29dp"
            android:id="@+id/btnShareTwitter"
            android:src="@drawable/twittericon"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:layout_alignBottom="@+id/btnShareFacebook"
            android:layout_toRightOf="@+id/btnShareFacebook"
            android:layout_toEndOf="@+id/btnShareFacebook"
            android:onClick="buttonClicked"
            android:background="#00000000"
            android:scaleType="fitXY" />
    </RelativeLayout>

    <!--<ScrollView android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_alignParentBottom="true"-->
                <!--android:layout_alignRight="@+id/btnListNotify"-->
                <!--android:layout_below="@+id/btnListNotify"-->
                <!--android:layout_alignLeft="@+id/btnListNotify">-->

        <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
                <!--android:text="@string/app_name"-->
                <!--android:id="@+id/textView"-->
                <!--/>-->


    <!--</ScrollView>-->


</LinearLayout>
