...
        <!--android:layout_weight="1"-->
        <!--android:gravity="center_vertical"-->
        <!--android:orientation="vertical"-->
        <!--android:paddingLeft="5dp" >-->

        <!--<TextView-->
            <!--android:id="@+id/name"-->
            <!--android:padding="5dp"-->
            <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
            <!--android:layout_width="wrap_content"-->

            <!--android:layout_height="wrap_content"-->
            <!--android:gravity="center_vertical" />-->
...
            android:textStyle="bold"
            android:textColor="#45ADA8"
            android:gravity="center_vertical" />
-->
    </LinearLayout>
    <ToggleButton
        android:id="@+id/toggBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        />

</LinearLayout>
...
